syntax = "proto2";

package ligato.generic;

option go_package = "go.ligato.io/vpp-agent/v2/proto/ligato/generic";

import "google/protobuf/descriptor.proto";

// ModelSpec defines a model specification to identify a model.
message ModelSpec {

    // Module describes grouping for the model.
    optional string module = 1;

    // Version describes version of the model schema.
    optional string version = 2;

    // Type describes name of type described by this model.
    optional string type = 3;

    // Class describes purpose for the model.
    optional string class = 4;
}

extend google.protobuf.MessageOptions {
    optional ModelSpec model = 50222;
}

// ModelDetail represents info about model details.
message ModelDetail {

    // Spec is a specificaiton the model was registered with.
    required ModelSpec spec = 1;

    // ProtoName is a name of protobuf message representing the model.
    optional string proto_name = 2;

    message Option {
        required string key = 1;
        repeated string values = 2;
    }
    repeated Option options = 3;
}
